Try display:inline-block to fix alignment

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -132,7 +132,7 @@ tr:hover {
 }
 
 .bi {
-    position: relative;
+    display: inline-block;
     font-size: 2rem;
     font-family: none;
     color: $dark;
